fix entities dashboard grid item overflow

--- a/styles/dashboard-styles/dashboard-card.module.css
+++ b/styles/dashboard-styles/dashboard-card.module.css
@@ -73,6 +73,7 @@
   font-weight: 500;
   text-transform: uppercase;
   word-wrap: break-word;
+  word-break: break-all;
 }
 .additional_card_title {
   font-size: 0.7rem;
